feat(issues662): make default config adapt to 2c16g (#663)
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>